--- a/index.html
+++ b/index.html
@@ -5,26 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;1,300;1,400;1,500&family=Tilt+Neon&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Kameron:wght@400;500;600;700" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">
   <title>Portfolio Aglaë Gourdet</title>
 </head>
 <body>
   <main>
-    <section class="button">
-      <a>Work</a>
-      <a>about</a>
-      <a>contact</a>
-    </section>
-    <section class="who">
-      <h4>Aglaë Gourdet</h4>
-      <h6>developpeuse web junior / developpeuse<br>
-      React / developpeuse JavaScript
-      </h6>
-    </section>
+    <div class="wrapper">
+      <section class="who">
+        <h3>Aglaë Gourdet</h3>
+        <p>developpeuse web junior / developpeuse<br>
+        React / developpeuse JavaScript
+        </p>
+      </section>
+      <section class="button">
+        <a href="/work">Work</a>
+        <a href="/about">About</a>
+        <a href="/contact">Contact</a>
+      </section>
+    </div>
     <section class="social-media">
-      <a>Github</a>
-      <a>Linkdin</a>
+      <a class="github">Github</a>
+      <a class="linkdin">Linkdin</a>
     </section>
   </main>
 </body>
